--- a/Ex04.Menu.Interfaces/Ex04.Menu.Interfaces.csproj
+++ b/Ex04.Menu.Interfaces/Ex04.Menu.Interfaces.csproj
@@ -39,6 +39,7 @@
     <Compile Include="MenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubMenu.cs" />
+    <Compile Include="ValueOutOfRangeException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
