--- a/Ex04.Menu.Test/Ex04.Menu.Test.csproj
+++ b/Ex04.Menu.Test/Ex04.Menu.Test.csproj
@@ -34,8 +34,23 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CapitalsCounter.cs" />
+    <Compile Include="InterfaceTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowDate.cs" />
+    <Compile Include="ShowTime.cs" />
+    <Compile Include="VersionShower.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ex04.Menu.Delegates\Ex04.Menu.Delegates.csproj">
+      <Project>{58cb70de-9c6b-494d-bd9d-e28b9cd5561f}</Project>
+      <Name>Ex04.Menu.Delegates</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ex04.Menu.Interfaces\Ex04.Menu.Interfaces.csproj">
+      <Project>{cdbff2a9-3d1e-4a34-8de7-6323bc0467af}</Project>
+      <Name>Ex04.Menu.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
