--- a/Ex04.Menu.Delegates/Ex04.Menu.Delegates.csproj
+++ b/Ex04.Menu.Delegates/Ex04.Menu.Delegates.csproj
@@ -33,8 +33,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MainMenu.cs" />
+    <Compile Include="MenuAction.cs" />
+    <Compile Include="MenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubMenu.cs" />
+    <Compile Include="ValueOutOfRangeException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
