--- a/Ex04.Menu.Test/Ex04.Menu.Test.csproj
+++ b/Ex04.Menu.Test/Ex04.Menu.Test.csproj
@@ -39,8 +39,8 @@
     <Compile Include="InterfaceTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShowDate.cs" />
-    <Compile Include="ShowTime.cs" />
+    <Compile Include="DateShower.cs" />
+    <Compile Include="TimeShower.cs" />
     <Compile Include="VersionShower.cs" />
   </ItemGroup>
   <ItemGroup>
